--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +17,7 @@ body {
   position: fixed;
   width: 200%;
   height: 200%;
-  background: radial-gradient(circle at 30% 30%, #fbe9e7, transparent 60%),
+  background: radial-gradient(circle at 30% 30%, #e7fbea, transparent 60%),
               radial-gradient(circle at 70% 70%, #e0f7fa, transparent 60%),
               radial-gradient(circle at 50% 90%, #f1f8e9, transparent 70%);
   animation: move-bg 15s infinite alternate ease-in-out;
@@ -50,7 +49,7 @@ header {
 }
 
 header .logo {
-  color: #376736;
+  color: #4b9049;
   font-family: "Ranchers", sans-serif;
   font-style: normal;
   font-weight: 400;
